Fixed Firefox scrollbar bug

--- a/src/scss/_container.scss
+++ b/src/scss/_container.scss
@@ -1,5 +1,6 @@
 .ultraselect {
     display: table;
+    border-collapse: collapse;
 
     @import "select";
     @import "options";
